--- a/app/static/css/final_project.css
+++ b/app/static/css/final_project.css
@@ -122,6 +122,8 @@ body {
   border: 1px solid var(--gray);
   margin: 20px 0;
   padding: 10px;
+  width: 100%;
+  position: relative;
 }
 
 .filters {
@@ -291,4 +293,42 @@ md-tab-item:hover {
 
 .legend text {
   fill: var(--dark-gray);
+}
+
+.box {
+  fill: steelblue;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.median {
+  stroke: black;
+  stroke-width: 2px;
+}
+
+.whisker {
+  stroke: black;
+  stroke-width: 1px;
+}
+/* 
+.tooltip {
+  position: absolute;
+  background: white;
+  border: 1px solid black;
+  padding: 5px;
+  font-size: 14px;
+  display: none;
+} */
+
+.info-box {
+  background-color: #f0f0f0; /* Light gray background */
+  padding: 15px;
+  border-radius: 8px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  max-width: 800px;        /* Adjust width if needed */
+  text-align: justify;     /* Justify the paragraph text */
+  margin: 20px auto;       /* Center the frame horizontally */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
